Поменял тайтл, добавил цену на всплывающем окне

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker-standalone.min.css" />
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" href="image/favicon.png" type="image/png">
-        <title>Ukrainian Univetsal Exchange</title>
+        <title>DHL</title>
     </head>
     <body>
         <header>    
@@ -120,11 +120,11 @@
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                     <div id="deliveryList"> 
                                         <div class="form-radio">                        
-                                            <label for id="radioLeft" class="form-radio-label">Delivery to address</label>
+                                            <label for id="radioLeft" class="form-radio-label">Delivery to address (+60)</label>
                                             <input type="radio" id="radioLeft" name="deliv" class="form-radio-input " value="Delivery to adress">
                                         </div>
                                         <div class="form-radio">
-                                            <label for id="radioRight" class="form-radio-label">Delivery to the office</label>
+                                            <label for id="radioRight" class="form-radio-label">Delivery to the office (+40)</label>
                                             <input type="radio" id="radioRight" name="deliv" class="form-radio-input " value="Delivery to the office">        
                                         </div>
                                     </div>
