--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                     <div id="deliveryList"> 
                                         <div class="form-radio">                        
-                                            <label for id="radioLeft" class="form-radio-label">Delivery to address (+60)</label>
+                                            <label for id="radioLeft" class="form-radio-label">Delivery to address +60</label>
                                             <input type="radio" id="radioLeft" name="deliv" class="form-radio-input " value="Delivery to adress">
                                         </div>
                                         <div class="form-radio">
-                                            <label for id="radioRight" class="form-radio-label">Delivery to the office (+40)</label>
+                                            <label for id="radioRight" class="form-radio-label">Delivery to the office +40</label>
                                             <input type="radio" id="radioRight" name="deliv" class="form-radio-input " value="Delivery to the office">        
                                         </div>
                                     </div>
